k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okd-poc-service
  labels:
    app: okd-poc
spec:
  selector:
    app: okd-poc
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
