k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: okd-poc-route
  labels:
    app: okd-poc
spec:
  to:
    kind: Service
    name: okd-poc-service
  port:
    targetPort: http
